--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-permalink: "/404.html"
+permalink: "404.html"
 ---
 
 <h1>{{ site.data.translate[site.lang].page_not_found | default: "Error 404" }}</h1>
